use work break to avoid text overflow

--- a/src/static/react/components/Navbar/style.scss
+++ b/src/static/react/components/Navbar/style.scss
@@ -1,7 +1,7 @@
 /* top credential bar */
 .credential-bar{
   background-color: #1f8dd6;
-  padding: .2em 4em;
+  padding: 5px 1rem 5px 0;
   color: white;
 
   display: flex;
@@ -25,11 +25,6 @@
     color: #1fd6c4;
   }
 
-  .logout{
-    margin-left: 2rem;
-    font-size: .8em;
-  }
-
   .register{
     & > a{
       margin: 0;
@@ -38,6 +33,10 @@
 
     font-size: .8em;
     margin-left: 1rem;
+  }
+
+  .logo{
+    height: 30px;
   }
 }
   
