--- a/src/static/react/scenes/Post/styles/create_post.scss
+++ b/src/static/react/scenes/Post/styles/create_post.scss
@@ -143,7 +143,7 @@ input:focus {
   margin-bottom: 2em;
 
   & .code-section {
-    margin-bottom: 3em;
+    margin-bottom: .5em;
 
     & .code-grid .code-meta {
       margin: 0 0 0.5em;
